unpackaged/main/default/objects/OrderApi__Sales_Order_Line_R__c/OrderApi__Sales_Order_Line_R__c.object-meta.xml
<CustomObject>
    <description>The Sales Order Line (R) tracks the related Sales Order Line&#39;s reporting currency and currency conversion rate at the time of creation when Fonteva&#39;s multi-currency is enabled.</description>
    <label>Sales Order Line (R)</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Sales Order Line (R) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Lines (R)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>