unpackaged/main/default/objects/OrderApi__Sales_Order_Line_R__c/fields/OrderApi__Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Balance_Due__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This value contains the total remaining amount due for this item in the reporting currency.</description>
    <inlineHelpText>This value contains the total remaining amount due for this item in the reporting currency.</inlineHelpText>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>