unpackaged/main/default/objects/OrderApi__Sales_Order_Line_R__c/fields/OrderApi__Overall_Total__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Overall_Total__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This value stores the total charged for this item in the reporting currency.</description>
    <inlineHelpText>This value stores the total charged for this item in the reporting currency.</inlineHelpText>
    <label>Overall Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>