unpackaged/main/default/objects/OrderApi__Sales_Order_Line_R__c/fields/OrderApi__Sales_Order_Line_Reference__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sales_Order_Line_Reference__c</fullName>
    <description>System field that creates a one to one relationship to a sales order line.</description>
    <externalId>true</externalId>
    <inlineHelpText>System field that creates a one to one relationship to a sales order line.</inlineHelpText>
    <label>Sales Order Line Reference</label>
    <length>18</length>
    <type>Text</type>
</CustomField>