unpackaged/main/default/objects/OrderApi__Sales_Order_Line_R__c/fields/OrderApi__Sales_Order_R__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sales_Order_R__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order (R)</label>
    <referenceTo>OrderApi__Sales_Order_R__c</referenceTo>
    <relationshipLabel>Sales Order Lines (R)</relationshipLabel>
    <relationshipName>Sales_Order_Lines_R</relationshipName>
    <type>Lookup</type>
</CustomField>